force-app/main/default/objects/Individual_Score_Detail__c/Individual_Score_Detail__c.object-meta.xml
<CustomObject>
    <description>A runtime record of each scoring criterion and its weighting used to calculate the record detailed score breakdown.</description>
    <label>Individual Score Detail</label>
    <nameField>
        <label>Individual Score Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Individual Score Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>