force-app/main/default/objects/Individual_Score_Detail__c/fields/Individual_Score__c.field-meta.xml
<CustomField>
    <fullName>Individual_Score__c</fullName>
    <label>Individual Score</label>
    <referenceTo>Individual_Score__c</referenceTo>
    <relationshipLabel>Individual Score Details</relationshipLabel>
    <relationshipName>Individual_Score_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>