force-app/main/default/objects/Individual_Score_Detail__c/fields/Sample_Record_Code__c.field-meta.xml
<CustomField>
    <fullName>Sample_Record_Code__c</fullName>
    <description>For sample/demo data.</description>
    <label>Sample Record Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>