force-app/main/default/objects/Individual_Score_Detail__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>Calculated score based on score logic</description>
    <label>Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>