force-app/main/default/objects/Individual_Score_Detail__c/fields/Study_Scoring_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Study_Scoring_Criteria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Scoring Criteria</label>
    <referenceTo>Study_Scoring_Criteria__c</referenceTo>
    <relationshipLabel>Individual Score Details</relationshipLabel>
    <relationshipName>Individual_Score_Details</relationshipName>
    <type>Lookup</type>
</CustomField>