force-app/main/default/objects/Individual_Score_Detail__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>Contribution percentage</description>
    <label>Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>