force-app/main/default/objects/Individual_Score_Detail__c/fields/Weighted_Score__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Score__c</fullName>
    <description>The calculated score that capped with max score and based on weightage</description>
    <label>Weighted Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>