force-app/main/default/objects/Individual_Score_Detail__c/validationRules/Required_Weight.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Weight</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Weight__c )</errorConditionFormula>
    <errorDisplayField>Weight__c</errorDisplayField>
    <errorMessage>The Weight is required.</errorMessage>
</ValidationRule>